# MathExprInterpreter

./: CMakeLists.txt  README.md  main.cpp
include/: AST.h  Evaluator.h  Lexer.h  Parser.h  Token.h
src/: Evaluator.cpp  Lexer.cpp  Parser.cpp
tests/: test_evaluator.cpp  test_lexer.cpp  test_parser.cpp
